fix logo stretch

--- a/src/styles/sass/ads-sass/landing-page.scss
+++ b/src/styles/sass/ads-sass/landing-page.scss
@@ -26,6 +26,7 @@ $landing-page-hero-background : desaturate(lighten($brand-info, 20%), 15%);
     max-width: 75px;
     position: relative;
     top: -5px;
+    max-height: 66;
   }
 
   >div {
